changes following review
Signed-off-by: Sophie Frasnedo <sophie.frasnedo@rte-france.com>